--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "typescript": "^2.8.3",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "node-sass": "^4.9.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "domready": "^1.0.8",
-    "node-sass": "^4.9.0"
+    "domready": "^1.0.8"
   }
 }
